added text effects

--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
     <link rel="stylesheet" href="styles1.css" />
     <script src="myScript1.js" type="module" defer></script>
 </head>
+
 <body id = "container">
     <header class = "topbar">
-        <h1> DBI COURSEWORK 2 HOMEPAGE </h1>
+        <link rel="stylesheet" href="stylespractise.css" />
+
+        <div class="title">   
+        <h1 class = "specialh1"> Kasia Sosin </h1>
+
+    </header>
+    
+    <div class = "subheader">
         <nav>
             <ul class = "customlist">
-                <li> <a href = 'people-search.html'>People search</a></li>
-                <li> <a href = 'vehicle-search.html'>Vehicle search</a> </li>
-                <li> <a href = 'add-a-vehicle.html'>Add a Vehicle</a></li>
+                <li> <a href = 'projects.html'>My Projects</a> </li>
+                <li> <a href = 'whatsnext.html'>What's Next?</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
 
     <main class = "maincontent">
-        <h2> This is my mainpage.</h3>
+        <h2> A bit about me...</h2>
+        <img class = "img" src='kasiasosin.jpeg' alt='top banner' height = 300 width = 230/> 
+        <p> Hi, my name is Kasia and I am a second year Computer Science student at the University of Nottingham. So far, I have most enjoyed the software engineering module and functional programming modules we completed in Year 1.</p>
+        <p> When I am not studying, I can usually be found, at the gym, hanging out with my friends or watching a movie.</p>
+        <p> My hobbies include: running (I am currently training for a half marathon), painting and badminton.</p>
+        <p> Feel free to have a look around and see what I have been up to :)</p>
     </main>
-
-    <aside class = "sidebar">
-        <img class = "img" src='stickman5.webp' alt='top banner' height = 150 width = 250/> 
-    </aside>
 
     <footer class = "footerbit">
         <p> Website created by Kasia Sosin &copy; 2024 </p>
