added funky text design

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p> Hi, my name is Kasia and I am a second year Computer Science student at the University of Nottingham. So far, I have most enjoyed the software engineering module and functional programming modules we completed in Year 1.</p>
         <p> When I am not studying, I can usually be found, at the gym, hanging out with my friends or watching a movie.</p>
         <p> My hobbies include: running (I am currently training for a half marathon), painting and badminton.</p>
-        <p> Feel free to have a look around and see what I have been up to :)</p>
+        <p> Feel free to have a look around and see what I have been up to! </p>
     </main>
 
     <footer class = "footerbit">
