added info to additional pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="stylespractise.css" />
 
         <div class="title">   
-        <h1 class = "specialh1"> Kasia Sosin </h1>
+        <h1 class = "specialh1"> Hello World </h1>
 
     </header>
     
@@ -28,7 +28,7 @@
 
     <main class = "maincontent">
         <h2> A bit about me...</h2>
-        <img class = "img" src='kasiasosin.jpeg' alt='top banner' height = 300 width = 230/> 
+        <img class = "img" src='kasiasosin.jpeg' alt='top banner' height = 300 width = 235/> 
         <p> Hi, my name is Kasia and I am a second year Computer Science student at the University of Nottingham. So far, I have most enjoyed the software engineering module and functional programming modules we completed in Year 1.</p>
         <p> When I am not studying, I can usually be found, at the gym, hanging out with my friends or watching a movie.</p>
         <p> My hobbies include: running (I am currently training for a half marathon), painting and badminton.</p>
