--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,10 @@
     </div>
 
     <main class = "maincontent">
-        <p>
-        </p>
+        <h2> What have I been up to? </h2>
+        <p> Over the summer, I have been teaching myself c# through online tutorials and videos. I have built several programs including a calculator, a rock, paper, scissors game, a grade calculator and many more.</p>
+        <p> I have also completed work experience where I was using c# to write unit and integration tests for a system in the media industry. </p>
+        <p> In my spare time, I have been using this website as a project to work on my html, css and javascript. As well as this, I have also enjoyed reading non-fiction books to understand more about logic and formal reasoning. My personal favourite is called "The Art of Logic" by Eugenia Chen.</p>
     </main>
 
     <footer class = "footerbit">
