--- a/whatsnext.html
+++ b/whatsnext.html
@@ -25,7 +25,10 @@
     </div>
 
     <main class = "maincontent">
-        <h3> </h3>
+        <h2> So what now?</h2>
+        <p> I am now entering my second year of university and I am looking forward to the range of modules which I will be studying in this academic year.</p>
+        <p> I will soon be looking at placements and opportunities which I hope to explore in my third year. After having seen the more technical side of software development during my work experience, I now hope to look into placement opportunities which are perhaps more creative such as UI/UX to gain an understanding a different part of the industry.</p>
+        <p> Finally, I hope to continue with my own projects in c# as well as html, css and javascript as I progress through second year. However, I understand that as university work picks up again, side projects are likely to take more of a backseat as I dedicate my efforts to the theory and coursework of my degree.</p>
     </main>
 
 
