updated summer project info

--- a/projects.html
+++ b/projects.html
@@ -26,8 +26,9 @@
 
     <main class = "maincontent">
         <h2> What have I been up to? </h2>
-        <p> Over the summer, I have been teaching myself c# through online tutorials and videos. I have built several programs including a calculator, a rock, paper, scissors game, a grade calculator and many more.</p>
-        <p> I have also completed work experience where I was using c# to write unit and integration tests for a system in the media industry. </p>
+        <p> Over the summer, I completed 2 weeks work experience at Imagine Communications where I was used c# to write unit and integration tests for their system. </p>
+        <p> I have also been teaching myself C# at home through online tutorials and videos. I have built several programs including a calculator, a rock, paper, scissors game, and a grade calculator. During this process I completed several C# certifications with FreeCodeCamp and Microsoft.</p>
+        <p> As well as C#, I have also spent time working on my Java, Python and Web Dev skills and have built a variety of projects including Check In automations, To Do lists and minigames.</p>
         <p> In my spare time, I have been using this website as a project to work on my html, css and javascript. As well as this, I have also enjoyed reading non-fiction books to understand more about logic and formal reasoning. My personal favourite is called "The Art of Logic" by Eugenia Chen.</p>
     </main>
 
