--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="stylespractise.css" />
 
         <div class="title">   
-        <h1 class = "specialh1"> Hello World </h1>
+        <h1 class = "specialh1"> Kasia Sosin </h1>
 
     </header>
     
