fixed error page issue

--- a/404.html
+++ b/404.html
@@ -11,8 +11,9 @@
     }
 
     body {
-        height: 100%;
-        margin: 0;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -20,11 +21,7 @@
         background-image: url(./nightskyWide.jpg);
     }
 
-    @media (max-width: 500px) {
-    .body {
-        background-image: url(./nightskyTall.jpg);
-    }
-}
+    
 
 
 
