--- a/404.html
+++ b/404.html
@@ -3,10 +3,10 @@
 <style type=text/css>
     p {
         color: black;    
-        font-weight: 900;    
-        font-size: 20px;    
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: bolder;    
         text-align: center;
+        font-family: "playfairDark";
+        font-size: xx-large;
         
     }
 
@@ -18,8 +18,19 @@
         justify-content: center;
         align-items: center;
         background-color: 20335;
-        background-image: url(./nightskyWide.jpg);
+        background-image: url(./nightsky4.webp);
     }
+
+    @font-face {
+     font-family: "playfairDark";
+     src: url("./fonts/playfairDark.ttf");
+   }
+
+   @media (max-width: 600px) {
+    .p {
+        font-size: small;
+    }
+}
 
     
 
