changed image backgrounds and fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="styles1.css" />
     <script src="myScript1.js" type="module" defer></script>
 </head>
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="stylespractise.css" />
 
         <div class="title">   
-        <h1 class = "specialh1"> Kasia Sosin </h1>
+        <h1> Kasia Sosin </h1>
 
     </header>
     
@@ -28,15 +28,22 @@
 
     <main class = "maincontent">
         <h2> A bit about me...</h2>
-        <img class = "img" src='kasiasosin.jpeg' alt='top banner' height = 300 width = 235/> 
-        <p> Hi, my name is Kasia and I am a second year Computer Science student at the University of Nottingham. So far, I have most enjoyed the software engineering module and functional programming modules we completed in Year 1.</p>
-        <p> When I am not studying, I can usually be found, at the gym, hanging out with my friends or watching a movie.</p>
-        <p> My hobbies include: running (I am currently training for a half marathon), painting and badminton.</p>
-        <p> Feel free to have a look around and see what I have been up to! </p>
+        <div class="content-container">
+            <div class="text-content">
+                <p> Hi, my name is Kasia and I am a second year Computer Science student at the University of Nottingham. So far, I have most enjoyed the software engineering module and functional programming modules we completed in Year 1.</p>
+                <p> When I am not studying, I can usually be found, at the gym, hanging out with my friends or watching a movie.</p>
+                <p> My hobbies include: running (I am currently training for a half marathon), painting and badminton.</p>
+                <p> Feel free to have a look around and see what I have been up to! </p>
+            </div>
+            <div class="image-container">
+                <img src='kasiasosin.jpeg' alt='top banner' height = 200 width = 180/> 
+            </div>
+        </div>
+    
     </main>
 
     <footer class = "footerbit">
-        <p> Website created by Kasia Sosin &copy; 2024 </p>
+        <p class = "footer-text"> Website created by Kasia Sosin &copy; 2024 </p>
     </footer>
 
 </body>
